@@ -1,3 +1,7 @@
+2005-11-10  Russell Bryant <russell@digium.com>
+
+	* many files in apps/: Clean up some application descriptions. Make sure all descriptions in changed files are wrapped at 80 characters.
+
 2005-11-09  Russell Bryant <russell@digium.com>
 
 	* pbx.c: Clean up descriptions of built-in dialplan applications. Changes include clearer wording and not referring to return values.
